Revert changes to Span will always have a field with the current implementation
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>